@startuml
!theme plain
skinparam backgroundColor transparent
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName "Helvetica"
skinparam classAttributeIconSize 0
skinparam ArrowColor #33475b
skinparam class {
  BackgroundColor #FBFCFE
  BorderColor #33475b
  ArrowColor #33475b
}

' ── Anchor from Sprint 1 (compacted) ──
class User <<Sprint 1>> {
  +id : UUID
  +email : String <<unique>>
}

' ── Sprint 2 — Projects & Membership ──
package "Projects & Membership (Sprint 2)" {

  class Project #LightYellow {
    +id : UUID
    +businessUnit : BusinessUnit
    +status : ProjectStatus
    +projectType : ProjectType
    +paid : Boolean
    +isArchived : Boolean
    +displayOrder : Integer
    +kanbanSettings : Json
    -createdById : UUID
  }

  together {
    class ProjectContent #LightYellow {
      +id : UUID
      +name : String
      +unaccentedName : String
      +language : Language
    }

    class ProjectMember #LightYellow {
      +id : UUID
      +isManager : Boolean
      +hourlyRate : Decimal
    }

    class ProjectInvitation #LightYellow {
      +id : UUID
      +email : String
      +token : String <<unique>>
      +status : InvitationStatus
      +expiresAt : DateTime
    }
  }

  together {
    enum BusinessUnit #LightYellow {
      TawerDev
      TawerCreative
    }
    enum ProjectType #LightYellow {
      AGILE
      FREESTYLE
    }
    enum ProjectStatus #LightYellow {
      Pending
      Running
      Stopped
      Completed
    }
    enum InvitationStatus #LightYellow {
      PENDING
      ACCEPTED
      EXPIRED
      CANCELLED
    }
  }
}

' ── Relations from the anchor into Sprint 2 ──
User "1" --> "0..*" Project : creates
User "1" --> "0..*" ProjectMember : "member of"
User "1" --> "0..*" ProjectInvitation : "invited by"

' ── Sprint 2 internal relations ──
Project "1" --> "1..*" ProjectContent : "has (i18n)"
Project "1" --> "1..*" ProjectMember : "has team"
Project "1" --> "0..*" ProjectInvitation : "has invites"

Project ..> BusinessUnit
Project ..> ProjectType
Project ..> ProjectStatus
ProjectInvitation ..> InvitationStatus
@enduml
